# synohubs

./: .gitignore  SYNHUB_LOGIN_ARCHITECTURE.md
.github/workflows/: build-desktop.yml
synohubs/: index.html  package-lock.json  package.json
synohubs.com/public/releases/: version.json
synohubs.com/src/: index.css
synohubs.com/src/components/: Download.jsx  LiveVisitors.jsx  Premium.jsx
synohubs.com/src/i18n/: locales.js
synohubs/src/: App.tsx  main.tsx
synohubs/src-tauri/: Cargo.toml  tauri.conf.json
synohubs/src-tauri/capabilities/: default.json
synohubs/src-tauri/src/: lib.rs  main.rs
synohubs/src/components/: Logo.tsx  Titlebar.tsx
synohubs/src/layouts/: AppLayout.css  AppLayout.tsx
synohubs/src/screens/: PlaceholderScreen.tsx
synohubs/src/services/: authService.ts  firebase.ts  syncService.ts  tierService.ts
synohubs/src/stores/: audioStore.ts  index.ts
synohubs/src/styles/: index.css
synohubs/src/utils/: nasModels.ts
synohubs_mobile/: .gitignore  LICENSE  README.md  publish.ps1  pubspec.yaml
synohubs_mobile/android/app/: build.gradle.kts  google-services.json.example
synohubs_mobile/ios/Runner/: Info.plist
synohubs_mobile/ios/Runner.xcodeproj/: project.pbxproj
synohubs_mobile/lib/: firebase_options.dart.example  main.dart
synohubs_mobile/lib/l10n/: app_en.arb  app_fr.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_pt.arb  (+7 more)
synohubs_mobile/linux/: CMakeLists.txt
synohubs_mobile/test/: widget_test.dart
synohubs_mobile/web/: index.html  manifest.json
synohubs_mobile/windows/: CMakeLists.txt
(+77 files in other folders)
