[package]
name = "synohubs"
version = "0.1.0"
description = "SynoHubs - Multi-NAS Manager"
authors = ["SynoHubs Team"]
edition = "2021"

[lib]
name = "synohubs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
regex-lite = "0.1"
url = "2"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "6"
urlencoding = "2"
axum = "0.7"
tokio-stream = "0.1"
